--- a/tasks/src/index.css
+++ b/tasks/src/index.css
@@ -4,6 +4,8 @@
   --grayesh:#87999dde;
   --task-title:#cd5e0dc7;
   --task-date:#000;
+  --dialog-confirm-deletation:#a4a7c1f2;
+;
 }
 body {
   padding:20px;
@@ -12,6 +14,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.pointer{
+  cursor: pointer;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -91,7 +98,7 @@ position: relative;
   right:10px;
 }
 .task_container h1{
-font-size: 20px;
+font-size: 16px;
 font-family: 'poppins bold';
 font-weight:bold ;
 margin-bottom: 10px;
@@ -100,12 +107,78 @@ color: var(--task-title);
 }
 
 .task_container h1 span{
-  font-size: 10px;
+  font-size: 11px;
   margin-left: 20px;
   color: var(--task-date);
   font-weight: 100;
 }
 
 .task_container p{
+  font-size: 11px;
+  margin-left: 20px;
+  color: var(--task-date);
+  font-weight: 100;
+}
 
+.date{
+  width: 100%;
+    height: 46px;
+    border: solid 1px #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    color: #6d6d6d;
+}
+
+.creatTask h1{
+  width:100%;
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom:20px;
+  font-size:30px;
+  text-align: center;
+  color: var(--task-title);
+}
+
+.creatTask{
+  width:90%;
+  height: 90%;
+}
+
+.validationlable{
+  width:100%;
+  padding: 5px;
+  margin: 30px;
+  text-align: center;
+  color: red;
+}
+
+.confirmation-dialog{
+  width: 98%;
+    height: 95%;
+    position: absolute;
+    background: var(--dialog-confirm-deletation);
+    top: 4px;
+    z-index: 8;
+    text-align: center;
+    padding-top: 20px;
+    border-radius: 5px;
+    transition: all 1s ease-out;
+}
+.confirmation-dialog p{
+font-size: 18px;
+    color: red;
+    margin-bottom: 10px;
+    font-family: inherit;
+    
+}
+
+.confirmation-dialog button{
+width: 120px;
+    height: 25px;
+    border: solid 1px #ddd;
+    border-radius: 5px;
+    color: #444;
+    font-size: 14px;
+    font-family: 'poppins';
+    margin:2px;
 }
